--- a/demo/src/main/res/layout/audio_player_activity.xml
+++ b/demo/src/main/res/layout/audio_player_activity.xml
@@ -1,11 +1,127 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
-    <Button
-        android:id="@+id/audio_player_activity_button"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/audio_player_controls_container">
+
+        <ImageView
+            android:id="@+id/audio_player_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:ignore="ContentDescription"/>
+
+        <ProgressBar
+            android:id="@+id/audio_player_loading"
+            style="?android:progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"/>
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/audio_player_controls_container"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Start Audio Service"/>
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        android:paddingTop="10dp"
+        tools:background="@color/background_material_light">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/audio_player_position"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:textColor="@android:color/black"
+                android:layout_marginLeft="10dp"
+                tools:text="00:00"
+                tools:ignore="RtlHardcoded"/>
+
+            <TextView
+                android:id="@+id/audio_player_duration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:textColor="@android:color/black"
+                android:layout_marginRight="10dp"
+                tools:text="00:00"
+                tools:ignore="RelativeOverlap,RtlHardcoded"/>
+        </RelativeLayout>
+
+        <SeekBar
+            android:id="@+id/audio_player_seek"
+            style="?android:seekBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="10dp">
+
+            <android.support.v4.widget.Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <ImageButton
+                android:id="@+id/audio_player_previous"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:src="@drawable/exomedia_ic_skip_previous_black"
+                android:scaleType="centerInside"
+                android:visibility="invisible"
+                tools:visibility="visible"
+                tools:ignore="ContentDescription"/>
+
+            <android.support.v4.widget.Space
+                android:layout_width="44dp"
+                android:layout_height="match_parent" />
+
+            <ImageButton
+                android:id="@+id/audio_player_play_pause"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:src="@drawable/exomedia_ic_play_arrow_black"
+                android:scaleType="centerInside"
+                tools:ignore="ContentDescription"/>
+
+            <android.support.v4.widget.Space
+                android:layout_width="44dp"
+                android:layout_height="match_parent" />
+
+            <ImageButton
+                android:id="@+id/audio_player_next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:src="@drawable/exomedia_ic_skip_next_black"
+                android:scaleType="centerInside"
+                android:visibility="invisible"
+                tools:visibility="visible"
+                tools:ignore="ContentDescription"/>
+
+            <android.support.v4.widget.Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
