Major refactoring of the EMPlaylistService and EMPlaylistManager to provide full functionality without Otto bus events. Updated the Demo to use the new paradigm for the service.

--- a/demo/src/main/res/layout/audio_player_activity.xml
+++ b/demo/src/main/res/layout/audio_player_activity.xml
@@ -32,6 +32,8 @@
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
         android:paddingTop="10dp"
+        android:elevation="4dp"
+        android:translationZ="2dp"
         tools:background="@color/background_material_light">
 
         <RelativeLayout
