--- a/demo/src/main/res/layout/video_player_activity.xml
+++ b/demo/src/main/res/layout/video_player_activity.xml
@@ -7,5 +7,5 @@
         android:id="@+id/video_play_activity_video_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        EMVideoView:defaultControlsEnabled="true"/>
+        EMVideoView:useDefaultControls="true"/>
 </RelativeLayout>
