--- a/demo/src/main/res/layout/video_player_activity.xml
+++ b/demo/src/main/res/layout/video_player_activity.xml
@@ -2,11 +2,15 @@
                 xmlns:EMVideoView="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
                 android:background="@android:color/black">
 
-    <com.devbrackets.android.exomedia.ui.widget.EMVideoView
-        android:id="@+id/video_play_activity_video_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        EMVideoView:useDefaultControls="true"/>
+    <!--Added programatically-->
+    <!--<com.devbrackets.android.exomedia.ui.widget.EMVideoView-->
+        <!--android:id="@+id/video_play_activity_video_view"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--EMVideoView:useDefaultControls="true"/>-->
+
 </RelativeLayout>
