--- a/demo/src/main/res/layout/startup_activity.xml
+++ b/demo/src/main/res/layout/startup_activity.xml
@@ -5,8 +5,7 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".StartupActivity">
+                android:paddingBottom="@dimen/activity_vertical_margin">
 
     <ListView
         android:id="@+id/startup_activity_list"
