--- a/demo/src/main/res/layout/video_player_activity.xml
+++ b/demo/src/main/res/layout/video_player_activity.xml
@@ -1,11 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:EMVideoView="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <com.devbrackets.android.exomedia.ui.widget.EMVideoView
         android:id="@+id/video_play_activity_video_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        EMVideoView:useDefaultControls="true"/>
+        android:layout_height="match_parent" />
 </RelativeLayout>
