Added a FIT_XY option to the scale type

--- a/demo/src/main/res/layout/video_player_activity.xml
+++ b/demo/src/main/res/layout/video_player_activity.xml
@@ -8,5 +8,6 @@
         android:id="@+id/video_play_activity_video_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:videoScale="fitXY"
         app:useDefaultControls="true"/>
 </RelativeLayout>
