--- a/demo/src/main/res/layout/video_player_activity.xml
+++ b/demo/src/main/res/layout/video_player_activity.xml
@@ -10,4 +10,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:useDefaultControls="true"/>
+    <com.devbrackets.android.exomediademo.ui.subtitle.AspectRatioFrameLayout
+        android:id="@+id/video_player_activity_subtitle_frame_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        >
+
+        <com.devbrackets.android.exomediademo.ui.subtitle.SubtitleView
+            android:id="@+id/subtitleView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+    </com.devbrackets.android.exomediademo.ui.subtitle.AspectRatioFrameLayout>
 </RelativeLayout>
