--- a/demo/src/main/res/layout/audio_player_activity.xml
+++ b/demo/src/main/res/layout/audio_player_activity.xml
@@ -1,132 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/audio_player_controls_container">
+    <View
+        android:id="@+id/controls_background"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#fffafafa"
+        android:paddingTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/currentPositionView" />
 
-        <ImageView
-            android:id="@+id/artworkView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:ignore="ContentDescription"/>
-
-        <ProgressBar
-            android:id="@+id/loadingBar"
-            style="?android:progressBarStyleLarge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"/>
-    </RelativeLayout>
-
-    <LinearLayout
-        android:id="@+id/audio_player_controls_container"
-        android:layout_width="match_parent"
+    <ImageButton
+        android:id="@+id/playPauseButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:elevation="4dp"
-        android:orientation="vertical"
-        android:paddingTop="10dp"
-        android:translationZ="2dp"
-        tools:background="@color/background_material_light">
+        android:layout_margin="24dp"
+        android:background="@android:color/transparent"
+        android:scaleType="centerInside"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/playlistcore_ic_play_arrow_black"
+        tools:ignore="ContentDescription" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <ImageButton
+        android:id="@+id/previousButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="24dp"
+        android:background="@android:color/transparent"
+        android:scaleType="centerInside"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@id/playPauseButton"
+        app:layout_constraintEnd_toStartOf="@id/playPauseButton"
+        app:layout_constraintTop_toTopOf="@id/playPauseButton"
+        app:srcCompat="@drawable/playlistcore_ic_skip_previous_black"
+        tools:ignore="ContentDescription"
+        tools:visibility="visible" />
 
-            <TextView
-                android:id="@+id/currentPositionView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="10dp"
-                android:textColor="@android:color/black"
-                tools:ignore="RtlHardcoded"
-                tools:text="00:00"/>
+    <ImageButton
+        android:id="@+id/nextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="24dp"
+        android:background="@android:color/transparent"
+        android:scaleType="centerInside"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@id/playPauseButton"
+        app:layout_constraintStart_toEndOf="@id/playPauseButton"
+        app:layout_constraintTop_toTopOf="@id/playPauseButton"
+        app:srcCompat="@drawable/playlistcore_ic_skip_next_black"
+        tools:ignore="ContentDescription"
+        tools:visibility="visible" />
 
-            <TextView
-                android:id="@+id/durationView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="10dp"
-                android:textColor="@android:color/black"
-                tools:ignore="RelativeOverlap,RtlHardcoded"
-                tools:text="00:00"/>
-        </RelativeLayout>
+    <ImageView
+        android:id="@+id/artworkView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/controls_background"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
 
-        <SeekBar
-            android:id="@+id/seekBar"
-            style="?android:seekBarStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+    <ProgressBar
+        android:id="@+id/loadingBar"
+        style="?android:progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/artworkView"
+        app:layout_constraintEnd_toEndOf="@id/artworkView"
+        app:layout_constraintStart_toStartOf="@id/artworkView"
+        app:layout_constraintTop_toTopOf="@id/artworkView" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal">
+    <SeekBar
+        android:id="@+id/seekBar"
+        style="?android:seekBarStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@id/playPauseButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-            <androidx.legacy.widget.Space
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"/>
 
-            <ImageButton
-                android:id="@+id/previousButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:background="@android:color/transparent"
-                android:scaleType="centerInside"
-                android:visibility="invisible"
-                app:srcCompat="@drawable/playlistcore_ic_skip_previous_black"
-                tools:ignore="ContentDescription"
-                tools:visibility="visible"/>
+    <TextView
+        android:id="@+id/durationView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="10dp"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toTopOf="@id/seekBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="RtlHardcoded"
+        tools:text="00:00" />
 
-            <androidx.legacy.widget.Space
-                android:layout_width="44dp"
-                android:layout_height="match_parent"/>
+    <TextView
+        android:id="@+id/currentPositionView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="10dp"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toTopOf="@id/seekBar"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="RtlHardcoded"
+        tools:text="00:00" />
 
-            <ImageButton
-                android:id="@+id/playPauseButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:scaleType="centerInside"
-                app:srcCompat="@drawable/playlistcore_ic_play_arrow_black"
-                tools:ignore="ContentDescription"/>
 
-            <androidx.legacy.widget.Space
-                android:layout_width="44dp"
-                android:layout_height="match_parent"/>
 
-            <ImageButton
-                android:id="@+id/nextButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:background="@android:color/transparent"
-                android:scaleType="centerInside"
-                android:visibility="invisible"
-                app:srcCompat="@drawable/playlistcore_ic_skip_next_black"
-                tools:ignore="ContentDescription"
-                tools:visibility="visible"/>
 
-            <androidx.legacy.widget.Space
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"/>
-
-        </LinearLayout>
-    </LinearLayout>
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
