--- a/demo/src/main/res/layout/video_player_activity.xml
+++ b/demo/src/main/res/layout/video_player_activity.xml
@@ -1,5 +1,4 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:playerConfigProvider="com.devbrackets.android.exomediademo.App$OkPlayerConfigProvider"
-        app:useDefaultControls="true"/>
+        app:useDefaultControls="true" />
 
     <com.devbrackets.android.exomediademo.ui.subtitle.AspectRatioFrameLayout
         android:id="@+id/subtitleFrameLayout"
@@ -21,6 +20,6 @@
         <com.devbrackets.android.exomediademo.ui.subtitle.SubtitleView
             android:id="@+id/subtitleView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
     </com.devbrackets.android.exomediademo.ui.subtitle.AspectRatioFrameLayout>
 </RelativeLayout>
