Updated the Video Controls to use a provider and monitor video playback state instead of having the VideoView inform of specific changes

--- a/demo/src/main/res/layout/video_player_activity.xml
+++ b/demo/src/main/res/layout/video_player_activity.xml
@@ -9,8 +9,7 @@
     android:id="@+id/videoView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:playerConfigProvider="com.devbrackets.android.exomediademo.App$OkPlayerConfigProvider"
-    app:useDefaultControls="true" />
+    app:playerConfigProvider="com.devbrackets.android.exomediademo.App$OkPlayerConfigProvider"/>
 
   <com.devbrackets.android.exomediademo.ui.subtitle.AspectRatioFrameLayout
     android:id="@+id/subtitleFrameLayout"
