Fixed a demo crash caused by multiple competing caches

--- a/demo/src/main/res/layout/video_player_activity.xml
+++ b/demo/src/main/res/layout/video_player_activity.xml
@@ -9,7 +9,7 @@
     android:id="@+id/videoView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:playerConfigProvider="com.devbrackets.android.exomediademo.App$OkPlayerConfigProvider"/>
+    app:playerConfigProvider="com.devbrackets.android.exomediademo.util.OkPlayerConfigProvider"/>
 
   <com.devbrackets.android.exomediademo.ui.subtitle.AspectRatioFrameLayout
     android:id="@+id/subtitleFrameLayout"
